[package]
name = "keystore-update"
version = "0.1.0"
edition = "2021"
authors = ["Sofiane Akermoun <akersof@gmail.com>"]
homepage = "https://github.com/AbsoluteVirtueXI/protocol-audit/tree/main/keystore-update"
repository = "https://github.com/AbsoluteVirtueXI/protocol-audit/tree/main/keystore-update"
license = "MIT OR Apache-2.0"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hex = "0.4.3"
fastrand = "1.7.0"
md5 = "0.7.0"
sha2 = "0.10.6"
rand = "0.8.5"
aes-gcm = "0.10.1"
chrono = "0.4.22"
