[package]
name = "app2"
version = "0.1.0"
edition = "2018"
 
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
[dependencies]
#primitive-types = "0.10.0"
 
k256="0.9.6"
hex="0.4.3"
rand_core="0.6.3"
fastrand="1.7.0"
md5="0.7.0"
rust-crypto="0.2.0"
rustc-serialize = "0.3"
